<resources>
    <string name="app_name">BanzaShoes</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="username_account">username</string>
    <string name="name_account">Name</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="web_client_id">975745157092-rrs8aosdugv0lbbn4vpu44l8o7m6im9r.apps.googleusercontent.com</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_email">Username or email</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="or_with">Or with</string>
    <string name="email">Email</string>
    <string name="brand">Offical Brand</string>
    <string name="recommend">Recommend</string>
    <string name="sizes">Size</string>
    <string name="addToCart">Add to cart</string>
    <string name="description">Description</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="checkout">Checkout</string>
    <string name="zero_dollar">$0</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="Dashboard">Dashboard</string>
    <string name="banner">Banner</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="bill">Bill</string>
    <string name="user">User</string>
    <string name="buy">Buy</string>
    <string name="sign_in">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="additional_info">Additional Information</string>
    <string name="done">Done</string>
    <string name="additional_info_txt">After registering using methods like google or github, we need to add information for them.</string>
    <string name="Signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="enter_otp">Enter OTP code</string>
    <string name="summary">Summary</string>
    <string name="order">Order</string>
    <string name="recent_order">Recent Order</string>
    <string name="phone">Phone</string>
    <string name="search_hint">Seach</string>
    <string name="address">Address</string>
    <string name="choose_address">Choose address</string>
    <string name="edit">Edit</string>
    <string name="my_order">My order</string>
    <string name="empty_order">You have no orders yet</string>
    <string name="order_detail">Order detail</string>
</resources>