<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.SigninFragment"
    tools:ignore="ContentDescription">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x1"
            android:text="@string/sign_in"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_x3" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x2"
            android:background="@drawable/bg_edittext">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsernameEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_email"
                android:paddingHorizontal="@dimen/x1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="@dimen/x2"
            android:background="@drawable/bg_edittext">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingHorizontal="@dimen/x1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_with"
            android:textAlignment="center"
            android:textSize="@dimen/text_x2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_btn"
                android:layout_width="@dimen/x3"
                android:layout_height="@dimen/x3"
                android:layout_marginEnd="@dimen/x2"
                android:src="@drawable/ic_google" />

            <ImageView
                android:id="@+id/github_btn"
                android:layout_width="@dimen/x3"
                android:layout_height="@dimen/x3"
                android:src="@drawable/ic_github" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:padding="@dimen/x1"
                android:layout_marginEnd="@dimen/x1"
                android:text="@string/sign_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:padding="@dimen/x1"
                android:text="@string/Signup" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>