<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/detail_image_container"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/prDetail" />

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/x1"
                app:layout_constraintBottom_toBottomOf="@id/detail_image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/llRw1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/x2"
                android:layout_marginTop="@dimen/x2"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/detail_image_container">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/x1"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/text_x3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ivRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x1"
                        android:drawableLeft="@drawable/ic_star_solid" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x2"
                android:layout_marginTop="@dimen/x1"
                android:text="@string/description"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_x2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llRw1" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x2"
                android:layout_marginTop="@dimen/x1"
                android:layout_marginEnd="@dimen/x2"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_x1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_des" />

            <TextView
                android:id="@+id/tv_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x2"
                android:layout_marginTop="@dimen/x1"
                android:text="Review"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_x2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/x2"
                app:layout_constraintTop_toBottomOf="@id/tv_review_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x2"
        android:background="@color/white"
        android:paddingBottom="@dimen/x2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_x3"
            app:layout_constraintBottom_toBottomOf="@id/addToCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addToCart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x1"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@null"
            android:padding="@dimen/x2"
            android:text="@string/addToCart"
            app:layout_constraintBottom_toBottomOf="@id/buyBtn"
            app:layout_constraintEnd_toStartOf="@id/buyBtn"
            app:layout_constraintTop_toTopOf="@+id/buyBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@null"
            android:padding="@dimen/x2"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>
